--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,4 +23,16 @@ flutter:
   assets:
     - images/isaac.JPG
 
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
+    - family: SourceSans3
+      fonts:
+        - asset: fonts/SourceSans3-VariableFont_wght.ttf
+
+
+
+
+
 
